# sgx-emm

./: CMakeLists.txt  bit_array.c  ema.c  emalloc.c  sgx_mm.c
